--- a/template/index.html
+++ b/template/index.html
@@ -199,6 +199,10 @@ button {
             // Prevent the default form submission behavior
             event.preventDefault();
         }
+        
+        $('#input_data').submit(function(event) {
+            submitForm(event);
+        });
     </script>    
 </body>
 </html>
